--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Tools Website</title>
+  <title>My Beautiful Courses</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to My Courses</h1>
-    <p>Select a course below to access the content.</p>
+    <h1>Learn with My Courses</h1>
+    <p>Choose a course below and start learning today!</p>
   </header>
   <main>
     <div class="course">
@@ -22,6 +23,9 @@
       <button onclick="openLink('https://drive.google.com/your-course-link-3')">Course 3: JavaScript Essentials</button>
     </div>
   </main>
+  <footer>
+    <p>&copy; 2025 My Tools Website. All Rights Reserved.</p>
+  </footer>
   <script src="script.js"></script>
 </body>
 </html>
