--- a/index.html
+++ b/index.html
@@ -3,28 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Beautiful Courses</title>
+  <title>Interactive Courses</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Learn with My Courses</h1>
-    <p>Choose a course below and start learning today!</p>
+    <h1>Learn With Style</h1>
+    <p>Unlock your potential with our interactive courses</p>
   </header>
   <main>
     <div class="course">
-      <button onclick="openLink('https://drive.google.com/your-course-link-1')">Course 1: HTML Basics</button>
+      <button onclick="openLink('https://drive.google.com/your-course-link-1')">📖 HTML Basics</button>
     </div>
     <div class="course">
-      <button onclick="openLink('https://drive.google.com/your-course-link-2')">Course 2: CSS Advanced</button>
+      <button onclick="openLink('https://drive.google.com/your-course-link-2')">🎨 CSS Advanced</button>
     </div>
     <div class="course">
-      <button onclick="openLink('https://drive.google.com/your-course-link-3')">Course 3: JavaScript Essentials</button>
+      <button onclick="openLink('https://drive.google.com/your-course-link-3')">💻 JavaScript Essentials</button>
     </div>
   </main>
   <footer>
-    <p>&copy; 2025 My Tools Website. All Rights Reserved.</p>
+    <p>&copy; 2025 Interactive Courses. All Rights Reserved.</p>
   </footer>
   <script src="script.js"></script>
 </body>
