--- a/index.html
+++ b/index.html
@@ -10,18 +10,37 @@
 <body>
   <header>
     <h1>Learn With Style</h1>
-    <p>Unlock your potential with our interactive courses</p>
+    <p>Explore interactive courses and enhance your skills</p>
   </header>
   <main>
-    <div class="course">
-      <button onclick="openLink('https://drive.google.com/your-course-link-1')">📖 HTML Basics</button>
-    </div>
-    <div class="course">
-      <button onclick="openLink('https://drive.google.com/your-course-link-2')">🎨 CSS Advanced</button>
-    </div>
-    <div class="course">
-      <button onclick="openLink('https://drive.google.com/your-course-link-3')">💻 JavaScript Essentials</button>
-    </div>
+    <section>
+      <h2>Web Development</h2>
+      <div class="courses-container">
+        <div class="course-card">
+          <h3>HTML Basics</h3>
+          <p>Learn the foundation of web development with HTML.</p>
+          <p><strong>Duration:</strong> 5 hours</p>
+          <button onclick="openLink('https://drive.google.com/your-course-link-1')">Learn More</button>
+        </div>
+        <div class="course-card">
+          <h3>CSS Advanced</h3>
+          <p>Master modern CSS techniques for stunning designs.</p>
+          <p><strong>Duration:</strong> 8 hours</p>
+          <button onclick="openLink('https://drive.google.com/your-course-link-2')">Learn More</button>
+        </div>
+      </div>
+    </section>
+    <section>
+      <h2>Programming</h2>
+      <div class="courses-container">
+        <div class="course-card">
+          <h3>JavaScript Essentials</h3>
+          <p>Dive into JavaScript and learn to build dynamic web apps.</p>
+          <p><strong>Duration:</strong> 10 hours</p>
+          <button onclick="openLink('https://drive.google.com/your-course-link-3')">Learn More</button>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
     <p>&copy; 2025 Interactive Courses. All Rights Reserved.</p>
