--- a/index.html
+++ b/index.html
@@ -15,36 +15,4 @@
   <main>
     <section>
       <h2>Web Development</h2>
-      <div class="courses-container">
-        <div class="course-card">
-          <h3>HTML Basics</h3>
-          <p>Learn the foundation of web development with HTML.</p>
-          <p><strong>Duration:</strong> 5 hours</p>
-          <button onclick="openLink('https://drive.google.com/your-course-link-1')">Learn More</button>
-        </div>
-        <div class="course-card">
-          <h3>CSS Advanced</h3>
-          <p>Master modern CSS techniques for stunning designs.</p>
-          <p><strong>Duration:</strong> 8 hours</p>
-          <button onclick="openLink('https://drive.google.com/your-course-link-2')">Learn More</button>
-        </div>
-      </div>
-    </section>
-    <section>
-      <h2>Programming</h2>
-      <div class="courses-container">
-        <div class="course-card">
-          <h3>JavaScript Essentials</h3>
-          <p>Dive into JavaScript and learn to build dynamic web apps.</p>
-          <p><strong>Duration:</strong> 10 hours</p>
-          <button onclick="openLink('https://drive.google.com/your-course-link-3')">Learn More</button>
-        </div>
-      </div>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2025 Interactive Courses. All Rights Reserved.</p>
-  </footer>
-  <script src="script.js"></script>
-</body>
-</html>
+      <div class="courses
