--- a/index.html
+++ b/index.html
@@ -3,24 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interactive Courses</title>
+  <title>TiTech Courses</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Learn With Style</h1>
-    <p>Explore interactive courses and enhance your skills</p>
+    <h1>Learn With TAHA</h1>
+    <p>Access a curated collection of valuable courses, made freely available by Taha to help you build exceptional skills without any cost!</p>
   </header>
   <main>
     <section>
       <h2>Web Development</h2>
       <div class="courses-container">
         <div class="course-card">
-          <img src="https://via.placeholder.com/300x200" alt="HTML Basics">
-          <h3>HTML Basics</h3>
-          <p>Learn the foundation of web development with HTML.</p>
-          <p><strong>Duration:</strong> 5 hours</p>
+          <img src="https://files.catbox.moe/229wca.jpeg" alt="yt blueprint">
+          <h3>YT Blueprint</h3>
+          <p>60-Day YouTube Monetization Blueprint.</p>
+          <p><strong>🌟 8 Modules:</strong>From Niche Mastery to Viral Video Secrets.</p>
+          <p><strong>🎓 Premium Bonuses:</strong>Tools, Templates, and Effects Packs.</p>
+          <p><strong>🎁 Exclusive Checklists:</strong>Fast-track your monetization journey.</p>
           <button onclick="openLink('https://drive.google.com/your-course-link-1')">Learn More</button>
         </div>
         <div class="course-card">
