--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </header>
   <main>
     <section>
-      <h2>Web Development</h2>
+      <h2>Youtube</h2>
       <div class="courses-container">
         <div class="course-card">
           <img src="https://files.catbox.moe/229wca.jpeg" alt="yt blueprint">
