--- a/index.html
+++ b/index.html
@@ -20,35 +20,37 @@
           <img src="https://files.catbox.moe/229wca.jpeg" alt="yt blueprint">
           <h3>YT Blueprint</h3>
           <p>60-Day YouTube Monetization Blueprint.</p>
-          <p><strong>🌟 8 Modules:</strong>From Niche Mastery to Viral Video Secrets.</p>
+          <p><strong>🌟 8 Modules:</strong> From Niche Mastery to Viral Video Secrets.</p>
           <p><strong>🎓 Premium Bonuses:</strong>Tools, Templates, and Effects Packs.</p>
           <p><strong>🎁 Exclusive Checklists:</strong>Fast-track your monetization journey.</p>
           <button onclick="openLink('https://drive.google.com/your-course-link-1')">Learn More</button>
         </div>
         <div class="course-card">
           <img src="https://via.placeholder.com/300x200" alt="CSS Advanced">
-          <h3>CSS Advanced</h3>
-          <p>Master modern CSS techniques for stunning designs.</p>
-          <p><strong>Duration:</strong> 8 hours</p>
+          <h3>YT Automation </h3>
+          <h4>Phed – Faceless ⚡YouTube Growth ▶</h4>
+          <p>This course goes over every single aspect of how Phed and Wanner have been able to successfully achieve financial freedom through YouTube automation of Faceless Channels.
+</p>
+          <p><strong>Lesson:</strong> 50+ Lessons💪🏻</p>
           <button onclick="openLink('https://drive.google.com/your-course-link-2')">Learn More</button>
         </div>
       </div>
     </section>
     <section>
-      <h2>Programming</h2>
+      <h2>Contact Admin</h2>
       <div class="courses-container">
         <div class="course-card">
-          <img src="https://via.placeholder.com/300x200" alt="JavaScript Essentials">
-          <h3>JavaScript Essentials</h3>
-          <p>Dive into JavaScript and learn to build dynamic web apps.</p>
-          <p><strong>Duration:</strong> 10 hours</p>
-          <button onclick="openLink('https://drive.google.com/your-course-link-3')">Learn More</button>
+          <img src="https://files.catbox.moe/xr4rb3.jpeg" alt="Titech">
+          <h3>TiTech Whatsapp Channel</h3>
+          <p>Join our whatsapp channel...</p>
+          <p><strong>Join Now</strong></p>
+          <button onclick="openLink('https://whatsapp.com/channel/0029Vax8sIOHAdNdaIxBMe3c')">Click Here</button>
         </div>
       </div>
     </section>
   </main>
   <footer>
-    <p>&copy; 2025 Interactive Courses. All Rights Reserved.</p>
+    <p>&copy; 2025 All Rights Reserved.</p>
   </footer>
   <script src="script.js"></script>
 </body>
