--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
           <button onclick="openLink('https://drive.google.com/your-course-link-1')">Learn More</button>
         </div>
         <div class="course-card">
-          <img src="https://via.placeholder.com/300x200" alt="CSS Advanced">
+          <img src="https://files.catbox.moe/73u24k.jpeg" alt="yt automation img">
           <h3>YT Automation </h3>
-          <h4>Phed – Faceless ⚡YouTube Growth ▶</h4>
-          <p>This course goes over every single aspect of how Phed and Wanner have been able to successfully achieve financial freedom through YouTube automation of Faceless Channels.
-</p>
+          <h4>Phed – Faceless ⚡YouTube Growth </h4>
+          <p>This course goes over every single aspect of how Phed and Wanner have been able to successfully achieve financial freedom through YouTube automation of Faceless Channels.</p>
           <p><strong>Lesson:</strong> 50+ Lessons💪🏻</p>
           <button onclick="openLink('https://drive.google.com/your-course-link-2')">Learn More</button>
         </div>
