--- a/index.html
+++ b/index.html
@@ -21,29 +21,28 @@
           <h3>YT Blueprint</h3>
           <p>60-Day YouTube Monetization Blueprint.</p>
           <p><strong>🌟 8 Modules:</strong> From Niche Mastery to Viral Video Secrets.</p>
-          <p><strong>🎓 Premium Bonuses:</strong>Tools, Templates, and Effects Packs.</p>
-          <p><strong>🎁 Exclusive Checklists:</strong>Fast-track your monetization journey.</p>
+          <p><strong>🎓 Premium Bonuses:</strong> Tools, Templates, and Effects Packs.</p>
+          <p><strong>🎁 Exclusive Checklists:</strong> Fast-track your monetization journey.</p>
           <button onclick="openLink('https://drive.google.com/your-course-link-1')">Learn More</button>
         </div>
         <div class="course-card">
           <img src="https://files.catbox.moe/73u24k.jpeg" alt="yt automation img">
-          <h3>YT Automation </h3>
-          <h4>Phed – Faceless ⚡YouTube Growth </h4>
+          <h3>YT Automation</h3>
+          <h4>Phed – Faceless ⚡YouTube Growth</h4>
           <p>This course goes over every single aspect of how Phed and Wanner have been able to successfully achieve financial freedom through YouTube automation of Faceless Channels.</p>
-          <p><strong>Lesson:</strong> 50+ Lessons💪🏻</p>
+          <p><strong>Lesson:</strong> 50+ Lessons 💪🏻</p>
           <button onclick="openLink('https://drive.google.com/your-course-link-2')">Learn More</button>
         </div>
       </div>
     </section>
     <section>
       <h2>Contact Admin</h2>
-      <div class="courses-container">
-        <div class="course-card">
-          <img src="https://files.catbox.moe/xr4rb3.jpeg" alt="Titech">
+      <div class="contact-container">
+        <img src="https://files.catbox.moe/xr4rb3.jpeg" alt="Titech">
+        <div class="contact-details">
           <h3>TiTech Whatsapp Channel</h3>
-          <p>Join our whatsapp channel...</p>
-          <p><strong>Join Now</strong></p>
-          <button onclick="openLink('https://whatsapp.com/channel/0029Vax8sIOHAdNdaIxBMe3c')">Click Here</button>
+          <p>Join our WhatsApp channel to stay updated with the latest courses.</p>
+          <button onclick="openLink('https://whatsapp.com/channel/0029Vax8sIOHAdNdaIxBMe3c')" class="contact-button">Contact Now</button>
         </div>
       </div>
     </section>
