--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="contact-details">
           <h3>TiTech Whatsapp Channel</h3>
           <p>Join our WhatsApp channel to stay updated with the latest courses.</p>
-          <button onclick="openLink('https://whatsapp.com/channel/0029Vax8sIOHAdNdaIxBMe3c')" class="contact-button">Contact Now</button>
+          <button onclick="openLink('https://whatsapp.com/channel/0029Vax8sIOHAdNdaIxBMe3c')" class="contact-button">Join Now</button>
         </div>
       </div>
     </section>
